[gd_scene load_steps=12 format=3 uid="uid://dgkyt8vikwwn6"]

[ext_resource type="StyleBox" uid="uid://clt67rot44qgn" path="res://assets/scenes/EditorV2/Style/StyleB_Editor_btn_disabled.tres" id="1_2o521"]
[ext_resource type="StyleBox" uid="uid://drfhb5723mfe7" path="res://assets/scenes/EditorV2/Style/StyleB_Editor_btn_hover.tres" id="1_876sx"]
[ext_resource type="Script" path="res://assets/scenes/EditorV2/QuestionEditorV2.gd" id="1_tv314"]
[ext_resource type="StyleBox" uid="uid://bqad651mr3uvc" path="res://assets/scenes/EditorV2/Style/StyleB_Editor_btn_normal.tres" id="2_248gj"]
[ext_resource type="StyleBox" uid="uid://dtc42mdl8lgne" path="res://assets/scenes/EditorV2/Style/StyleB_Editor_Flat_Label.tres" id="3_uijjo"]
[ext_resource type="LabelSettings" uid="uid://chqtcjs3tayx3" path="res://assets/scenes/EditorV2/Style/Question_List_Header.tres" id="6_851cc"]
[ext_resource type="LabelSettings" uid="uid://dpv3tm8xybld3" path="res://assets/scenes/EditorV2/Style/Question_Editor_dividers.tres" id="7_7dy80"]
[ext_resource type="Texture2D" uid="uid://dgak4kr4bdxs1" path="res://assets/scenes/EditorV2/Style/RedX.png" id="7_ncku1"]
[ext_resource type="Texture2D" uid="uid://qwe1ynkdknjm" path="res://assets/scenes/EditorV2/Style/GreenO.png" id="8_5qrwy"]
[ext_resource type="Texture2D" uid="uid://ck8xbcr6f1r0t" path="res://assets/scenes/EditorV2/Style/YellowDash.png" id="9_u300d"]

[sub_resource type="Theme" id="Theme_gmvmo"]
BoxContainer/constants/separation = 0
Button/colors/font_hover_color = Color(0.524558, 0.932946, 0.775818, 1)
Button/font_sizes/font_size = 32
Button/styles/disabled = ExtResource("1_2o521")
Button/styles/hover = ExtResource("1_876sx")
Button/styles/normal = ExtResource("2_248gj")
ItemList/font_sizes/font_size = 24
Label/styles/normal = ExtResource("3_uijjo")
TextEdit/font_sizes/font_size = 24

[node name="QuestionEditorV2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_gmvmo")
script = ExtResource("1_tv314")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 3.0
offset_right = -1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176972, 0.197504, 0.247845, 1)

[node name="HBoxParent" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1917.0
offset_bottom = 1081.0

[node name="VBoxQuestionBrowser" type="VBoxContainer" parent="HBoxParent"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VBoxQuestions" type="VBoxContainer" parent="HBoxParent/VBoxQuestionBrowser"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestionListHeader" type="Label" parent="HBoxParent/VBoxQuestionBrowser/VBoxQuestions"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Questions"
label_settings = ExtResource("6_851cc")
horizontal_alignment = 1

[node name="SearchBar" type="TextEdit" parent="HBoxParent/VBoxQuestionBrowser/VBoxQuestions"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Search..."

[node name="HDivider" type="ColorRect" parent="HBoxParent/VBoxQuestionBrowser/VBoxQuestions"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxParent/VBoxQuestionBrowser/VBoxQuestions"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="ItemList" type="ItemList" parent="HBoxParent/VBoxQuestionBrowser/VBoxQuestions/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
auto_height = true
item_count = 3
item_0/text = "Dummy1"
item_0/icon = ExtResource("7_ncku1")
item_1/text = "Dummy2"
item_1/icon = ExtResource("8_5qrwy")
item_2/text = "Dummy3"
item_2/icon = ExtResource("9_u300d")

[node name="VBoxIputButtons" type="VBoxContainer" parent="HBoxParent/VBoxQuestionBrowser"]
layout_mode = 2
size_flags_vertical = 8

[node name="BtnNew" type="Button" parent="HBoxParent/VBoxQuestionBrowser/VBoxIputButtons"]
layout_mode = 2
text = "Create New Question"

[node name="BtnEdit" type="Button" parent="HBoxParent/VBoxQuestionBrowser/VBoxIputButtons"]
layout_mode = 2
text = "Edit Selected Question"

[node name="BtnDelete" type="Button" parent="HBoxParent/VBoxQuestionBrowser/VBoxIputButtons"]
layout_mode = 2
text = "Delete Selected Question"

[node name="VDivider" type="ColorRect" parent="HBoxParent"]
clip_contents = true
custom_minimum_size = Vector2(10, 50)
layout_mode = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="VBoxQuestionEditor" type="VBoxContainer" parent="HBoxParent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="QuestionHeader" type="Label" parent="HBoxParent/VBoxQuestionEditor"]
layout_mode = 2
text = "Header"
label_settings = ExtResource("7_7dy80")
horizontal_alignment = 1

[node name="Header" type="VBoxContainer" parent="HBoxParent/VBoxQuestionEditor"]
layout_mode = 2
size_flags_vertical = 3

[node name="Name" type="TextEdit" parent="HBoxParent/VBoxQuestionEditor/Header"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Name"

[node name="Tags" type="TextEdit" parent="HBoxParent/VBoxQuestionEditor/Header"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Tags"

[node name="QuestionBody" type="TextEdit" parent="HBoxParent/VBoxQuestionEditor/Header"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
placeholder_text = "Question Body"

[node name="Question_Answers" type="Label" parent="HBoxParent/VBoxQuestionEditor"]
layout_mode = 2
text = "Answers"
label_settings = ExtResource("7_7dy80")
horizontal_alignment = 1

[node name="Answers" type="VBoxContainer" parent="HBoxParent/VBoxQuestionEditor"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Correct" type="TextEdit" parent="HBoxParent/VBoxQuestionEditor/Answers"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Correct Answer"

[node name="Wrong1" type="TextEdit" parent="HBoxParent/VBoxQuestionEditor/Answers"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Wrong Answer One"

[node name="Wrong2" type="TextEdit" parent="HBoxParent/VBoxQuestionEditor/Answers"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Wrong Answer Two"

[node name="Wrong3" type="TextEdit" parent="HBoxParent/VBoxQuestionEditor/Answers"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Wrong Answer Three"

[node name="Question_Chances" type="Label" parent="HBoxParent/VBoxQuestionEditor"]
layout_mode = 2
text = "Chances"
label_settings = ExtResource("7_7dy80")
horizontal_alignment = 1
